# dml-language-server

./: .gitignore  Cargo.toml  MCP_SERVER_GUIDE.md
.qoder/repowiki/en/content/: API Reference.md  Action Context and Request Handling.md  Concurrency and Threading.md  Configuration Management.md  Development Guide.md  Development and Contributing.md  Examples and Tutorials.md  Getting Started.md  Project Overview.md  Python Port Implementation.md  Testing Framework.md  Virtual File System.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  Configuration API.md  Internal Extension API.md  Language Server Protocol API.md  Model Context Protocol API.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
example_files/: watchdog_timer.dml
python-port/: DEVELOPMENT.md  ENHANCEMENTS_COMPLETED.md  ENHANCEMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  PARSER_ENHANCEMENTS.md  PARSER_FIXES.md  README.md  pyproject.toml  test_installation.py
python-port/dml_language_server/: __init__.py  cmd.py  config.py  file_management.py  lsp_data.py  main.py
python-port/dml_language_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python-port/dml_language_server/analysis/: __init__.py  types.py
python-port/dml_language_server/analysis/parsing/: __init__.py  enhanced_parser.py  syntax_validator.py  template_system.py
python-port/dml_language_server/analysis/structure/: __init__.py  expressions.py  objects.py  statements.py  toplevel.py  types.py
python-port/dml_language_server/analysis/templating/: __init__.py  methods.py  objects.py  topology.py  traits.py  types.py
python-port/dml_language_server/dfa/: __init__.py  main.py
python-port/dml_language_server/lint/: __init__.py
python-port/dml_language_server/lint/rules/: __init__.py
python-port/dml_language_server/mcp/: __init__.py  main.py
python-port/dml_language_server/server/: __init__.py
python-port/dml_language_server/span/: __init__.py
python-port/dml_language_server/vfs/: __init__.py
python-port/examples/: compile_commands.json  lint_config.json  sample_device.dml  utility.dml
python-port/tests/: README.md  __init__.py  test_advanced_lsp_features.py  test_basic.py  test_cli_functionality.py  test_error_handling.py  test_installation.py  test_lsp_components.py  test_syntax_validator.py
scip/: .gitignore  generate_pb2.sh  pyproject.toml  read_scip.py
simics-project/: .gitignore  bootstrap.sh  create_project.sh  gen_scip.sh  project-setup.cmake  read_scip.sh  scip_dump.md  scip_dump.txt
simics-project/modules/wdt/: wdt.dml
src/: lib.rs
src/mcp/: generation.rs  main.rs  mod.rs  server.rs  templates.rs  tools.rs
src/test/: README.md  mcp_advanced_test.py  mcp_basic_test.py  mcp_unit_tests.rs  mod.rs  run_mcp_tests.py
(+102 files in other folders)
